working charts on city view

--- a/app/views/locations/location.dashboard.html
+++ b/app/views/locations/location.dashboard.html
@@ -3,19 +3,27 @@
         <div class="col-md-4">
             <div class="hpanel hblue" >
                 <div class="panel-body">
-                    <div class="stats-title pull-left">
-                        <h4>People</h4>
+                    <div class="col-xs-2">
+                        <div class="stats-title pull-left">
+                            <h4>People</h4>
+                        </div>
+                        <div class="m-t-xl">
+                            <h1 class="text-info">184</h1>
+                        </div>
                     </div>
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-id fa-4x"></i>
+                    <div class="col-xs-8" >
+                        <canvas class="chart chart-line" data="charts.people.data" labels="charts.people.labels" series="charts.people.series" colours="charts.people.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        </canvas>
                     </div>
-                    <div class="m-t-xl">
-                        <h1 class="text-info">184</h1>
+                    <div class="col-xs-2">
+                        <div class="stats-icon pull-right">
+                            <i class="pe-7s-id fa-4x"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="panel-footer contact-footer">
                     <div class="row">
-                        <div class="col-md-6 border-right">
+                        <div class="col-md-6 border-right border-bottom">
                             <div class="stats-title pull-left">
                                 <h6>Founders</h6>
                             </div>
@@ -26,7 +34,7 @@
                                 <h3 class="text-info">32</h3>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 border-bottom">
                             <div class="stats-title pull-left">
                                 <h6>Leaders</h6>
                             </div>
@@ -39,7 +47,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 border-right">
+                        <div class="col-md-6 border-right" style="padding-top: 10px;">
                             <div class="stats-title pull-left">
                                 <h6>Investors</h6>
                             </div>
@@ -50,7 +58,7 @@
                                 <h3 class="text-info">27</h3>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6" style="padding-top: 10px;">
                             <div class="stats-title pull-left">
                                 <h6>Advisors</h6>
                             </div>
@@ -68,19 +76,28 @@
         <div class="col-md-4">
             <div class="hpanel hgreen">
                 <div class="panel-body">
-                    <div class="stats-title pull-left">
-                        <h4>Startups</h4>
+                    <div class="col-xs-2">
+                        <div class="stats-title pull-left">
+                            <h4>Startups</h4>
+                        </div>
+                        <div class="m-t-xl">
+                            <h1 class="text-success">79</h1>
+                        </div>
                     </div>
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-power fa-4x"></i>
+                    <div class="col-xs-8" >
+                        <canvas class="chart chart-line" data="charts.startups.data"
+                                labels="charts.startups.labels" series="charts.startups.series" colours="charts.startups.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        </canvas>
                     </div>
-                    <div class="m-t-xl">
-                        <h1 class="text-success">79</h1>
+                    <div class="col-xs-2">
+                        <div class="stats-icon pull-right">
+                            <i class="pe-7s-power fa-4x"></i>
+                        </div>
                     </div>
                 </div>
                 <div class="panel-footer contact-footer">
                     <div class="row">
-                        <div class="col-md-6 border-right">
+                        <div class="col-md-6 border-right border-bottom">
                             <div class="stats-title pull-left">
                                 <h6>Bootstrap</h6>
                             </div>
@@ -88,10 +105,10 @@
                                 <small class="text-muted">1 - 2</small>
                             </div>
                             <div style="margin-top:23px;">
-                                <h3 class="text-info">37</h3>
+                                <h3 class="text-success">37</h3>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6 border-bottom">
                             <div class="stats-title pull-left">
                                 <h6>Validation</h6>
                             </div>
@@ -99,12 +116,12 @@
                                 <small class="text-muted">3 - 10</small>
                             </div>
                             <div style="margin-top:23px;">
-                                <h3 class="text-info">31</h3>
+                                <h3 class="text-success">31</h3>
                             </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-md-6 border-right">
+                        <div class="col-md-6 border-right" style="padding-top: 10px;">
                             <div class="stats-title pull-left">
                                 <h6>Growth</h6>
                             </div>
@@ -112,10 +129,10 @@
                                 <small class="text-muted">11 - 100</small>
                             </div>
                             <div style="margin-top:23px;">
-                                <h3 class="text-info">18</h3>
+                                <h3 class="text-success">18</h3>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-md-6" style="padding-top: 10px;">
                             <div class="stats-title pull-left">
                                 <h6>Scale</h6>
                             </div>
@@ -123,28 +140,83 @@
                                 <small class="text-muted">100+</small>
                             </div>
                             <div style="margin-top:23px;">
-                                <h3 class="text-info">6</h3>
+                                <h3 class="text-success">6</h3>
                             </div>
                         </div>
                     </div>
                 </div>
-
             </div>
         </div>
         <div class="col-md-4">
             <div class="hpanel hred">
                 <div class="panel-body">
-                    <div class="stats-title pull-left">
-                        <h4>Jobs</h4>
+                    <div class="col-xs-2">
+                        <div class="stats-title pull-left">
+                            <h4>Jobs</h4>
+                        </div>
+                        <div class="m-t-xl">
+                            <h1 class="text-danger">325</h1>
+                        </div>
                     </div>
-                    <div class="stats-icon pull-right">
-                        <i class="pe-7s-network fa-4x"></i>
+                    <div class="col-xs-8" >
+                        <canvas class="chart chart-line" data="charts.jobs.data"
+                                labels="charts.jobs.labels" series="charts.jobs.series" colours="charts.jobs.colors" options="charts.options" height="95" style="padding: 0 15px;">
+                        </canvas>
                     </div>
-                    <div class="m-t-xl">
-                        <h1 class="text-danger">325</h1>
-                        <small>
-                            Lorem Ipsum is simply dummy text of the printing and <strong>typesetting industry</strong>. Lorem Ipsum has been.
-                        </small>
+                    <div class="col-xs-2">
+                        <div class="stats-icon pull-right">
+                            <i class="pe-7s-network fa-4x"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="panel-footer contact-footer">
+                    <div class="row">
+                        <div class="col-md-6 border-right border-bottom">
+                            <div class="stats-title pull-left">
+                                <h6>Tech</h6>
+                            </div>
+                            <div class="stats-icon pull-right">
+                                <i class="fa fa-code" style="opacity: .5;"></i>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-danger">167</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-6 border-bottom">
+                            <div class="stats-title pull-left">
+                                <h6>Outdoor</h6>
+                            </div>
+                            <div class="stats-icon pull-right">
+                                <i class="fa fa-tree" style="opacity: .5;"></i>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-danger">71</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-6 border-right" style="padding-top: 10px;">
+                            <div class="stats-title pull-left">
+                                <h6>Bio-Science</h6>
+                            </div>
+                            <div class="stats-icon pull-right">
+                                <i class="fa fa-flask" style="opacity: .5;"></i>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-danger">82</h3>
+                            </div>
+                        </div>
+                        <div class="col-md-6" style="padding-top: 10px;">
+                            <div class="stats-title pull-left">
+                                <h6>Med-Tech</h6>
+                            </div>
+                            <div class="stats-icon pull-right">
+                                <i class="fa fa-stethoscope" style="opacity: .5;"></i>
+                            </div>
+                            <div style="margin-top:23px;">
+                                <h3 class="text-danger">63</h3>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
