location dash looking good

--- a/app/less/style.less
+++ b/app/less/style.less
@@ -36,7 +36,9 @@
 @import "layout.less";
 @import "lists.less";
 @import "panels.less";
+@import "projects.less";
 @import "tabs.less";
+@import "forum.less";
 @import "various.less";
 @import "base.less";
 
