location page done

--- a/app/views/locations/location.dashboard.html
+++ b/app/views/locations/location.dashboard.html
@@ -325,8 +325,8 @@
                 <div class="panel-body" style="height: 83px;">
                     <div class="row">
                         <div class="col-md-7 forum-heading">
-
-                            <a ui-sref="#"><h4><i class="fa fa-circle-o"></i> Stable of Experts</h4></a>
+                            <span class="label label-primary pull-left">Advisor Group</span>
+                            <a ui-sref="#"><h4> Stable of Experts</h4></a>
                             <div class="desc" style="margin-bottom:5px;">Economic Development for Central Oregon (EDCO) list of qualfied startup advisors.</div>
                         </div>
                         <div class="col-md-1 forum-info">
@@ -351,8 +351,8 @@
                 <div class="panel-body" style="height: 83px;">
                     <div class="row">
                         <div class="col-md-7 forum-heading">
-
-                            <a ui-sref="#"><h4><i class="fa fa-circle-o"></i> FoundersPad</h4></a>
+                            <span class="label label-success pull-left">Accelerator</span>
+                            <a ui-sref="#"><h4> FoundersPad</h4></a>
                             <div class="desc" style="margin-bottom:5px;">Regional accelerator for software startups.</div>
                         </div>
                         <div class="col-md-1 forum-info">
@@ -377,8 +377,8 @@
                 <div class="panel-body" style="height: 84px;">
                     <div class="row">
                         <div class="col-md-7 forum-heading">
-
-                            <a ui-sref="#"><h4><i class="fa fa-circle-o"></i> BendTECH</h4></a>
+                            <span class="label label-warning pull-left">Coworking</span>
+                            <a ui-sref="#"><h4> BendTECH</h4></a>
                             <div class="desc" style="margin-bottom:5px;">Coworking space for tech companies.</div>
                         </div>
                         <div class="col-md-1 forum-info">
