--- a/app/views/people/people.profile.html
+++ b/app/views/people/people.profile.html
@@ -60,8 +60,8 @@
                         </div>
                     </div>
                     <div class="col-sm-3 project-info">
-                        <div ng-if="mapCenter" class="border-right border-left">
-                            <map id="profile-map" center="{{mapCenter}}" zoom="11" disable-default-u-i="true"></map>
+                        <div ng-if="global.mapCenter" class="border-right border-left">
+                            <map id="profile-map" center="{{global.mapCenter}}" zoom="11" disable-default-u-i="true"></map>
                         </div>
 
                     </div>
