--- a/app/views/common/content.html
+++ b/app/views/common/content.html
@@ -28,7 +28,7 @@
                     </ol>
                 </div>
                 <h2 class="font-light m-b-xs">
-                    {{ $state.params.community.profile.logo || $state.params.community.profile.name }}
+                    {{ $state.params.community.profile.name }}
                 </h2>
                 <small>{{ $state.params.community.profile.description }}</small>
             </div>
