--- a/app/less/various.less
+++ b/app/less/various.less
@@ -15,6 +15,9 @@
   padding: 1px 6px;
   border-bottom-left-radius: 2px;
   border-top-left-radius: 2px;
+  -webkit-background-clip: padding-box;
+  background-clip: padding-box;
+  //border: 1px solid rgba(0, 0, 0, 0.14902);
   -webkit-box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
   box-shadow: rgba(0, 0, 0, 0.298039) 0px 1px 4px -1px;
   min-width: 28px;
@@ -24,7 +27,7 @@
 }
 
 #change-location:hover {
-  font-weight: 900 !important;
+  text-decoration: underline;
 }
 
 .stats-icon {
