--- a/app/views/common/navigation.html
+++ b/app/views/common/navigation.html
@@ -38,27 +38,30 @@
     </div>
 
     <ul side-navigation class="nav" id="side-menu">
+
         <li ng-class="{active: $state.includes('location')}" class="active">
             <a href="#"><span class="nav-label">Locations</span><span class="fa arrow"></span> </a>
             <ul class="nav nav-second-level" ng-class="{in: $state.includes('location')}">
-                <li ui-sref-active="active" ng-repeat="item in locations">
+                <li ui-sref-active="active" ng-repeat="item in global.community.locations">
                     <a ui-sref="location.dashboard({community: item})"><i class="fa fa-globe"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                 </li>
             </ul>
         </li>
+
         <li ng-class="{active: $state.includes('industry')}" class="active">
             <a href="#"><span class="nav-label">Clusters</span><span class="fa arrow"></span> </a>
             <ul class="nav nav-second-level" ng-class="{in: $state.includes('industry')}">
-                <li ui-sref-active="active" ng-repeat="item in industries">
-                    <a ui-sref="industry.dashboard({community:item})"><i ng-class="'fa ' + item[global.context.location].profile.icon"></i>&nbsp;&nbsp;{{item[global.context.location].profile.name}}</a>
+                <li ui-sref-active="active" ng-repeat="item in global.community.industries">
+                    <a ui-sref="industry.dashboard({community:item})"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                 </li>
             </ul>
         </li>
+
         <li ng-class="{active: $state.includes('network')}" class="active">
             <a href="#"><span class="nav-label">Networks</span><span class="fa arrow"></span> </a>
             <ul class="nav nav-second-level" ng-class="{in: $state.includes('network')}">
-                <li ui-sref-active="active" ng-repeat="item in networks">
-                    <a ui-sref="network.dashboard({community:item})"><i ng-class="'fa ' + item[global.context.location].profile.icon"></i>&nbsp;&nbsp;{{item[global.context.location].profile.name}}</a>
+                <li ui-sref-active="active" ng-repeat="item in global.community.networks">
+                    <a ui-sref="network.dashboard({community:item})"><i ng-class="'fa ' + item.profile.icon"></i>&nbsp;&nbsp;{{item.profile.name}}</a>
                 </li>
             </ul>
         </li>
