--- a/app/views/networks/network.dashboard.html
+++ b/app/views/networks/network.dashboard.html
@@ -229,7 +229,7 @@
         <div class="col-md-6">
             <div class="hpanel forum-box">
 
-                <div class="panel-heading">
+                <div class="panel-heading" style="border-bottom: 2px solid #34495E;">
                     <h3>Top Clusters</h3>
                 </div>
 
@@ -319,7 +319,7 @@
         <div class="col-md-6">
             <div class="hpanel forum-box">
 
-                <div class="panel-heading">
+                <div class="panel-heading" style="border-bottom: 2px solid #3498DB;">
                     <h3>Top Networks</h3>
                 </div>
 
