--- a/app/frontend/ghost/content/themes/nuevo/default.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/default.hbs
@@ -64,5 +64,16 @@
 	<script type="text/javascript" src="{{asset "js/fancybox/jquery.fancybox.pack.js"}}"></script>
 	<script type="text/javascript" src="{{asset "js/fancybox/helpers/jquery.fancybox-buttons.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/global.js"}}"></script>
+
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-58555092-2', 'auto');
+        ga('send', 'pageview');
+
+    </script>
 </body>
 </html>
