workign on sc resolve

--- a/app/views/common/header.html
+++ b/app/views/common/header.html
@@ -55,7 +55,7 @@
                 </a>
             </li>
             <li class="dropdown">
-                <a tooltip-placement="left" tooltip="Sign Out" ng-click="global.logout()" style="padding-right: 30px;">
+                <a tooltip-placement="left" tooltip="Sign Out" ui-sref="logout" style="padding-right: 30px;">
                     <i class="pe-7s-upload pe-rotate-90"></i>
                 </a>
             </li>
